# Contexter

./: Contexter.md  README.md  build_context_html.py  context_builder.py  contexter_utils.py  create_aliases.py  html2md.py  install.sh  mcp-requirements.txt  md2html.py  pyproject.toml  reconstructor.py  reconstructor_html.py  sanitize_context.py  server.py  setup.py  smart_update.py  update_context.py  update_context_html.py  updater.py  updater_html.py
Contexter-tool/: README.md  contexter.egg-info-PKG-INFO  contexter_utils.py  html2md.py  install.sh  md2html.py  project.toml  pyproject.toml  reconstructor_html.py  sanitize_context.py  setup.py  smart_update.py  update_context_html.py  updater_html.py
Contexter-tool/contexter.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
contexter.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
