```plaintext
# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contexter"
version = "2.0.0"
authors = [
 { name="ray0404", email="ray.valentin.04@gmail.com" },
]
description = "A suite of tools to package, reconstruct, and update software projects as single text-based context files (MD or HTML)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Topic :: Software Development :: Build Tools",
   "Topic :: Utilities",
]
dependencies = [
   "markdown",
   "Pygments",
   "markdownify",
   "beautifulsoup4",
   "patch",
]

[project.urls]
"Homepage" = "https://github.com/your-username/contexter"
"Bug Tracker" = "https://github.com/your-username/contexter/issues"